--- a/ps2/index.html
+++ b/ps2/index.html
@@ -16,11 +16,11 @@
     <div class="black">
       <div>
         <div class="question">
-          <h1>Qual a sua idade?</p>
+          <h1>Tem muito tempo que você sorriu ao provar uma roupa?</h1>
         </div>
         <div class="answer">
-          <a class="btn" href="https://zerobarrigaptc.site/ps2">+35</a>
-          <a class="btn2" href="https://zerobarrigaptc.site/ps2">-35</a>
+          <a class="btn" href="https://zerobarrigaptc.site/ps3">Sim</a>
+          <a class="btn2" href="https://zerobarrigaptc.site/ps3">Não</a>
         </div>
       </div>    
     </div>
