--- a/ps3/index.html
+++ b/ps3/index.html
@@ -16,11 +16,11 @@
     <div class="black">
       <div>
         <div class="question">
-          <h1>Qual a sua idade?</p>
+          <h1>Tudo Pronto para Prosseguir!</h1>
+          <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://zerobarrigaptc.site/ps2">+35</a>
-          <a class="btn2" href="https://zerobarrigaptc.site/ps2">-35</a>
+          <a class="btn" href="https://www.google.com/">CONTINUAR</a>
         </div>
       </div>    
     </div>
