--- a/ps2/index.html
+++ b/ps2/index.html
@@ -16,6 +16,7 @@
     <div class="black">
       <div>
         <div class="question">
+          <p>Pesquisa rápida antes de continuar (2/3):</p>
           <h1>Tem muito tempo que você sorriu ao provar uma roupa?</h1>
         </div>
         <div class="answer">
