--- a/ps3/index.html
+++ b/ps3/index.html
@@ -16,6 +16,7 @@
     <div class="black">
       <div>
         <div class="question">
+          <p>Sucesso! (3/3)</p>
           <h1>Tudo Pronto para Prosseguir!</h1>
           <p>Clique no botão abaixo para continuar</p>
         </div>
