--- a/ps/index.html
+++ b/ps/index.html
@@ -16,6 +16,7 @@
     <div class="black">
       <div>
         <div class="question">
+          <p>Pesquisa rápida antes de continuar (1/3):</p>
           <h1>Qual a sua idade?</p>
         </div>
         <div class="answer">
