--- a/ps3/index.html
+++ b/ps3/index.html
@@ -21,7 +21,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://www.google.com/">CONTINUAR</a>
+          <a class="btn" href="http://zerobarrigaptc.site/">CONTINUAR</a>
         </div>
       </div>    
     </div>
