--- a/ps/index.html
+++ b/ps/index.html
@@ -16,16 +16,15 @@
     <div class="black">
       <div>
         <div class="question">
-          <p>Pesquisa rápida antes de continuar (1/3):</p>
-          <h1>Qual a sua idade?</p>
+          <h1>Tudo Pronto para Prosseguir!</h1>
+          <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://zerobarrigaptc.site/ps2">+35</a>
-          <a class="btn2" href="https://zerobarrigaptc.site/ps2">-35</a>
+          <a class="btn" href="https://zerobarrigaptc.online/">CONTINUAR</a>
         </div>
       </div>    
     </div>
-    <p style="text-align: center; font-weight: bold;">© 2022 – Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
+    <p style="text-align: center; font-weight: bold;">© 2022 – Protocolo Zero Barriga. Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
   </div>
   <script type="text/javascript" src="script.js"></script>
 </body>
