--- a/ps/index.html
+++ b/ps/index.html
@@ -20,7 +20,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://zerobarrigaptc.online/">CONTINUAR</a>
+          <a class="btn" href="https://zerobarrigaptc.site/">CONTINUAR</a>
         </div>
       </div>    
     </div>
