--- a/ps/index.html
+++ b/ps/index.html
@@ -4,28 +4,36 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- Meta Pixel Code -->
-
-<!-- End Meta Pixel Code -->  
-
   <link rel="stylesheet" href="style.css">
-  <title>Tudo Pronto!</title>
+  <title>Suco de laranja sem casca</title>
 </head>
 <body> 
   <div class="container">
     <div class="black">
       <div>
+        <img src="image.jpeg" width="100%">
         <div class="question">
-          <h1>Tudo Pronto para Prosseguir!</h1>
-          <p>Clique no botão abaixo para continuar</p>
+          <h1>Aguarde, estamos redirecionando...</h1>
+          <p>"Depois desse ritual matinal de 3 minutos fiquei irreconhecível… me sinto emocionada e muito grata por ter aprendido esse segredo milenar".</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://zerobarrigaptc.site/">CONTINUAR</a>
         </div>
       </div>    
     </div>
-    <p style="text-align: center; font-weight: bold;">© 2022 – Protocolo Zero Barriga. Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
+    <p style="text-align: center; font-weight: bold;">Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
   </div>
   <script type="text/javascript" src="script.js"></script>
+  <script>
+    let popup = document.getElementById("popup");
+
+    function openPopup(){
+      popup.classList.add("open-popup");
+    }
+  </script>
+
+<script data-cfasync="false">
+  (function(W,i,s,e,P,o,p){W['WisePopsObject']=P;W[P]=W[P]||function(){(W[P].q=W[P].q||[]).push(arguments)},W[P].l=1*new Date();o=i.createElement(s),p=i.getElementsByTagName(s)[0];o.defer=1;o.src=e;p.parentNode.insertBefore(o,p)})(window,document,'script','//loader.wisepops.com/get-loader.js?v=1&site=UMfxs6WfUg','wisepops');
+  </script>
+  
 </body>
 </html>
