--- a/ps/index.html
+++ b/ps/index.html
@@ -13,7 +13,7 @@
       <div>
         <img src="image.jpeg" width="100%">
         <div class="question">
-          <h1>Aguarde, estamos redirecionando...</h1>
+          <h1>Internet lenta, aguarde...</h1>
           <p>"Depois desse ritual matinal de 3 minutos fiquei irreconhecível… me sinto emocionada e muito grata por ter aprendido esse segredo milenar".</p>
         </div>
         <div class="answer">
@@ -34,6 +34,6 @@
 <script data-cfasync="false">
   (function(W,i,s,e,P,o,p){W['WisePopsObject']=P;W[P]=W[P]||function(){(W[P].q=W[P].q||[]).push(arguments)},W[P].l=1*new Date();o=i.createElement(s),p=i.getElementsByTagName(s)[0];o.defer=1;o.src=e;p.parentNode.insertBefore(o,p)})(window,document,'script','//loader.wisepops.com/get-loader.js?v=1&site=UMfxs6WfUg','wisepops');
   </script>
-  
+
 </body>
 </html>
