--- a/ps/index.html
+++ b/ps/index.html
@@ -13,7 +13,7 @@
       <div>
         <img src="image.jpeg" width="100%">
         <div class="question">
-          <h1>Internet lenta, aguarde...</h1>
+          <h1>Gerando seu acesso VIP, aguarde...</h1>
           <p>"Depois desse ritual matinal de 3 minutos fiquei irreconhecível… me sinto emocionada e muito grata por ter aprendido esse segredo milenar".</p>
         </div>
         <div class="answer">
