--- a/ps/index.html
+++ b/ps/index.html
@@ -8,19 +8,32 @@
   <title>Suco de laranja sem casca</title>
 </head>
 <body> 
+  <!-- Meta Pixel Code -->
+<script>
+  !function (w, d, t) {
+    w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};var o=document.createElement("script");o.type="text/javascript",o.async=!0,o.src=i+"?sdkid="+e+"&lib="+t;var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(o,a)};
+  
+    ttq.load('C9EELJRC77UAIOF8NQV0');
+    ttq.page();
+  }(window, document, 'ttq');
+  </script>
+<!-- End Meta Pixel Code -->
   <div class="container">
     <div class="black">
       <div>
+        <h1>O Segredo Foi Revelado...</h1>
         <img src="image.jpeg" width="100%">
         <div class="question">
-          <h1>Gerando seu acesso VIP, aguarde...</h1>
-          <p>"Depois desse ritual matinal de 3 minutos fiquei irreconhecível… me sinto emocionada e muito grata por ter aprendido esse segredo milenar".</p>
+          <p><font color="#e80000">Apenas 0,3% </font>das mulheres de todo o mundo sabem desse segredo...</p>
+          <p>E as que sabem não compartilham com <font color="#e80000">ninguém</font>...</p>
+          <p>Clique para ver o vídeo!👇</p>
         </div>
+        <button class="btn" onclick="window.location.href='https://zerobarrigaptc.online/pspopup/'">CLIQUE AQUI</button>
         <div class="answer">
         </div>
       </div>    
     </div>
-    <p style="text-align: center; font-weight: bold;">Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
+    <p style="text-align: center; font-weight: bold;">Este site não faz parte nem é endossado pelo Tiktok. Tiktok é uma marca comercial da Tiktok, Inc.</p>
   </div>
   <script type="text/javascript" src="script.js"></script>
   <script>
@@ -29,10 +42,6 @@
     function openPopup(){
       popup.classList.add("open-popup");
     }
-  </script>
-
-<script data-cfasync="false">
-  (function(W,i,s,e,P,o,p){W['WisePopsObject']=P;W[P]=W[P]||function(){(W[P].q=W[P].q||[]).push(arguments)},W[P].l=1*new Date();o=i.createElement(s),p=i.getElementsByTagName(s)[0];o.defer=1;o.src=e;p.parentNode.insertBefore(o,p)})(window,document,'script','//loader.wisepops.com/get-loader.js?v=1&site=UMfxs6WfUg','wisepops');
   </script>
 
 </body>
