--- a/ps3/index.html
+++ b/ps3/index.html
@@ -18,7 +18,7 @@
         <p>Parece que isso é para você...</p></br>
         <div class="question">
           <p2>Você sente que já tentou de tudo e nada funcionou?😭</p2>
-          <center><img class="container" src="https://media0.giphy.com/media/2tP1vehNxWJG6YxKDe/giphy.gif"></center>
+          <center><img class="container" src="https://i.imgur.com/AzVsHLV.gif"></center>
 
         </div>
         <button class="btn" onclick="window.location.href='https://zerobarrigaptc.site/ps4'">Eu sinto</button> <p>
