--- a/ps2/index.html
+++ b/ps2/index.html
@@ -20,7 +20,7 @@
           <p2>Qual é o seu gênero?</p2></br></br>
         </div>
         <button class="btn" onclick="window.location.href='https://zerobarrigaptc.site/ps3/'">Mulher</button> <p>
-        <button class="btn" onclick="window.location.href='https://zerobarrigaptc.site/psp3/'">Homem</button>
+        <button class="btn" onclick="window.location.href='https://zerobarrigaptc.site/ps3/'">Homem</button>
         <div class="answer">
         </div>
       </div>    
