--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+
+    <!-- Velocidade do carregamento -->
+    <link rel="prerender" href="https://player-vz-678eb4de-41e.tv.pandavideo.com.br/embed/?v=1480d55f-5fdb-4038-8955-131db07f6220">
+<link rel="preload" href="https://player-vz-678eb4de-41e.tv.pandavideo.com.br/embed/js/hls.js" as="script">
+<link rel="preload" href="https://player-vz-678eb4de-41e.tv.pandavideo.com.br/embed/js/plyr.polyfilled.min.js" as="script">
+<link rel="preload" href="https://config.tv.pandavideo.com.br/vz-678eb4de-41e/1480d55f-5fdb-4038-8955-131db07f6220.json" as="fetch">
+<link rel="preload" href="https://config.tv.pandavideo.com.br/vz-678eb4de-41e/config.json" as="fetch">
+<link rel="preload" href="https://b-vz-678eb4de-41e.tv.pandavideo.com.br/1480d55f-5fdb-4038-8955-131db07f6220/playlist.m3u8" as="fetch">
+<link rel="dns-prefetch" href="https://b-vz-678eb4de-41e.tv.pandavideo.com.br">
+<link rel="dns-prefetch" href="https://player-vz-678eb4de-41e.tv.pandavideo.com.br">
+<link rel="dns-prefetch" href="https://vz-678eb4de-41e.b-cdn.net">
+<!-- Fim velocidade do carregamento -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -40,7 +53,7 @@
         <center><div class="col-lg-3" margin-left: "200px" margin-right: "200px">
                   <script>
                  const c=function(){const t=document.createElement("link").relList;if(t&&t.supports&&t.supports("modulepreload"))return;for(const n of document.querySelectorAll('link[rel="modulepreload"]'))s(n);new MutationObserver(n=>{for(const r of n)if(r.type==="childList")for(const a of r.addedNodes)a.tagName==="LINK"&&a.rel==="modulepreload"&&s(a)}).observe(document,{childList:!0,subtree:!0});function o(n){const r={};return n.integrity&&(r.integrity=n.integrity),n.referrerpolicy&&(r.referrerPolicy=n.referrerpolicy),n.crossorigin==="use-credentials"?r.credentials="include":n.crossorigin==="anonymous"?r.credentials="omit":r.credentials="same-origin",r}function s(n){if(n.ep)return;n.ep=!0;const r=o(n);fetch(n.href,r)}};c();function u(){const e=212;i(e),l(e)}function i(e){const t=document.querySelector(".hero__people-counter");t.innerHTML=`
-        <strong>${e}</strong> pessoas est\xE3o assistindo a esse v\xEDdeo. Devido \xE0 alta demanda de acessos, garantimos a
+        <strong>${e}</strong> pessoas assistindo agora. Devido \xE0 alta demanda de acessos, garantimos a
         apresenta\xE7\xE3o somente at\xE9 <strong>${d()}</strong>
       `}function l(e){setInterval(()=>{if(e<1053){e+=21,i(e);return}if(e===1074||e===1073||e===1069||e===1065||e===1061){e-=4,i(e);return}e===1057&&(e=1069,i(e))},4e3)}function d(){const e=new Date;let t=e.getDate(),o=Number(e.getMonth())+1;const s=e.getFullYear();return t<10&&(t=`0${t}`),o<10&&(o=`0${o}`),`${t}/${o}/${s}`}function f(){m()}function m(){document.querySelectorAll(".kits__list-card a").forEach(t=>{t.href=h(t.href)})}function h(e){const t=window.location.search.substring(1);return`${e}?${t}`}window.addEventListener("load",()=>{f(),u()});
           </script></center></mark>
@@ -52,7 +65,7 @@
               <div class="hero__video-area" margin-left: "200px" margin-right: "200px";>
                <p class="hero__people-counter">
         
-                  <strong>224</strong> pessoas estão assistindo a esse vídeo. Devido à alta demanda de acessos, garantimos a apresentação somente até <strong>hoje</strong>
+                  <strong>224</strong> pessoas assistindo agora. Devido à alta demanda de acessos, garantimos a apresentação somente até <strong>hoje</strong>
   
                 </p></div></span></div></center></div>
      <!-- End Script teste -->
@@ -68,7 +81,7 @@
             <center><h3 class="col-lg-10 text-center" class="my-4"><b>Vitamina Secreta de 6 INGREDIENTES Que <mark style="background-color:#FF1616; color:white;"> Derrete Muita Gordura Em 21 Dias</mark></b></h3></center>
               <br>
             <!-- VSL -->
-            <div style="position:relative;padding-top:56.25%;"><iframe id="panda-player" src="https://player-vz-678eb4de-41e.tv.pandavideo.com.br/embed/?v=11cfcc53-808c-4dbc-b076-904ad2efe45a" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%"></iframe></div>
+            <div style="position:relative;padding-top:56.25%;"><iframe id="panda-player" src="https://player-vz-678eb4de-41e.tv.pandavideo.com.br/embed/?v=1480d55f-5fdb-4038-8955-131db07f6220" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%"></iframe></div>
 
             <!-- Aviso Verificar Som -->
             <svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -99,9 +112,16 @@
           </svg>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/TQoGvUc" class="a-btn" style="text-decoration: none;">
+              <p class="span-btn2">Válido somente até o dia </p><div>
+                <script>
+                date = new Date().toLocaleDateString();
+                document.write(date);
+                </script>
+                </div><br>
+              
+              <a href="https://pay.kiwify.com.br/zR9MCL2" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO AO PROGRAMA!</span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
+                <span class="span-btn2">(De <u>R$97</u> por Somente R$9)</span>
               </a>
             </div>
           </div>
@@ -477,9 +497,9 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/TQoGvUc" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO OBTER ACESSO AO PROGRAMA!</span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
+              <a href="https://pay.kiwify.com.br/zR9MCL2" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">QUERO OBTER MEU ACESSO COM DESCONTO!</span>
+                <span class="span-btn2">(De <s>R$97</s> por Somente R$9)</span>
               </a>
             </div>
           </div>
