--- a/ps/index.html
+++ b/ps/index.html
@@ -21,7 +21,7 @@
           <p>E as que sabem não compartilham com <font color="#e80000">ninguém</font>...</p>
           <p>Clique para ver o vídeo!👇</p>
         </div>
-        <button class="btn" onclick="window.location.href='https://zerobarrigaptc.site/ps2/'">CLIQUE AQUI</button>
+        <button class="btn" onclick="window.location.href='https://zerobarrigaptc.site/pspopup/'">CLIQUE AQUI</button>
         <div class="answer">
         </div>
       </div>    
