--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </svg>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <p class="span-btn2">Válido somente até o dia </p><div>
+              <p class="span-btn2">Oferta especial válida somente até o dia </p><div>
                 <script>
                 date = new Date().toLocaleDateString();
                 document.write(date);
