--- a/cronograma21dias-obrigado1/index.html
+++ b/cronograma21dias-obrigado1/index.html
@@ -106,7 +106,7 @@
       É só tocar no botão para acessar o conteúdo AGORA!</p><br>
 
       <br>
-      <center><img height="250" src="cronograma.png"></center><br>
+      <center><img height="250" src="cronograma.png"></center><br><br>
       <div style="text-align:center">
         <button id="kiwify-upsell-trigger-TQoGvUc" style="background-color:#F39C19;padding:12px 16px;cursor:pointer;color:#FFFFFF;font-weight:600;border-radius:4px;border:1px solid #F39C19;font-size:20px;">QUERO EMAGRECER AGORA!</button>
         <div id="kiwify-upsell-cancel-trigger" style="margin-top:1rem;cursor:pointer;font-size:16px;text-decoration:underline;font-family:sans-serif;">Não quero emagrecer</div>
