--- a/cronograma21dias-obrigado1/index.html
+++ b/cronograma21dias-obrigado1/index.html
@@ -95,13 +95,13 @@
 
         Você vai ter acesso imediato a todo cronograma completo, com todos os bônus e ainda várias surpresas por uma pechincha…<br><br>
 
-      <b>Fizemos uma pesquisa com nossas 3 mil alunas e de acordo com elas o valor justo por esse protocolo completo, sem contar os bônus é de no mínimo R$397.</b><br><br>
+      <b>Fizemos uma pesquisa com nossas 3 mil alunas e de acordo com elas o valor justo por esse protocolo completo, sem contar os bônus é de no mínimo R$387.</b><br><br>
 
       Mas assim não vamos conseguir cumprir com nosso propósito de ajudar o máximo de mulheres e homens que precisam desse cronograma...<br><br>
 
-      E para resolver isso <u>vamos te oferecer AGORA um <b>desconto de R$270</b> </u>para que você tenha acesso ao Cronograma completo de 21 Dias do Protocolo Zero Barriga e derreta o excesso de gordura acumulada no seu organismo por somente 12x R$10,58.<br><br>
+      E para resolver isso <u>vamos te oferecer AGORA um <b>desconto de R$290</b> </u>para que você tenha acesso ao Cronograma completo de 21 Dias do Protocolo Zero Barriga e derreta o excesso de gordura acumulada no seu organismo por somente 12x R$8,08.<br><br>
       
-      <b>Só 10 reais por mês </b>e você finalmente vai conseguir vestir <b>as roupas que você usava com 20 anos e acabar de vez com a sensação de ansiedade e vergonha do seu próprio corpo.</b><br><br>
+      <b>Menos de 10 reais por mês </b>para você finalmente conseguir vestir <b>as roupas que você usava com 20 anos e acabar de vez com a sensação de ansiedade e vergonha do seu próprio corpo...</b> Acabar de vez com a sensação de que as pessoas estão sempre olhando pra sua barriga quando você sai de casa.<br><br>
 
       É só tocar no botão para acessar o conteúdo AGORA!</p><br>
 
