--- a/cronograma21dias-obrigado1/index.html
+++ b/cronograma21dias-obrigado1/index.html
@@ -12,7 +12,7 @@
   <div id="header" style="font-size: 26px; font-family: Arial;"><h2 >AÇÃO NECESSÁRIA: NÃO FECHE ESTA PÁGINA!</h2></div>
   <div id="main">
     <br>
-    <h1 style="font-size: 32px; line-height: 1.3; margin-left: 6%; margin-right: 6%;"><b> <font color="red">Sem isso </font>você não vai conseguir perder peso.</b></h1><br>
+    <h1 style="font-size: 32px; line-height: 1.3; margin-left: 6%; margin-right: 6%;"><b> <font color="red">Sem isso </font>você não vai conseguir perder peso</b></h1><br>
     <p style="font-size: 29px; margin-left: 8%; margin-right: 8%;">Se você acha que somente a receita da vitamina basta para queimar gordura e perder peso,<b> está cometendo um engano!</b></p><br>
     <p style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color:black; margin-left: 8%; margin-right: 8%; text-align: left;">De fato, <b>ela realmente vai te ajudar a perder peso...</b> <br> <br>
       <font color="#454545">Saber o que tomar para emagrecer é complicado para a maioria das pessoas, e isso você acabou de resolver adquirindo a Receita da Vitamina Secreta que está chegando no seu e-mail!</font>
@@ -106,7 +106,7 @@
       É só tocar no botão para acessar o conteúdo AGORA!</p><br>
 
       <br>
-      <center><img height="250" src="cronograma.png"></center><br>
+      <center><img height="250" src="cronograma.png"></center>
       <div style="text-align:center">
         <button id="kiwify-upsell-trigger-TQoGvUc" style="background-color:#F39C19;padding:12px 16px;cursor:pointer;color:#FFFFFF;font-weight:600;border-radius:4px;border:1px solid #F39C19;font-size:20px;">QUERO EMAGRECER AGORA!</button>
         <div id="kiwify-upsell-cancel-trigger" style="margin-top:1rem;cursor:pointer;font-size:16px;text-decoration:underline;font-family:sans-serif;">Não quero emagrecer</div>
