--- a/cronograma21dias-obrigado1/index.html
+++ b/cronograma21dias-obrigado1/index.html
@@ -101,7 +101,7 @@
 
       E para resolver isso <u>vamos te oferecer AGORA um <b>desconto de R$290</b> </u>para que você tenha acesso ao Cronograma completo de 21 Dias do Protocolo Zero Barriga e derreta o excesso de gordura acumulada no seu organismo por somente 12x R$8,08.<br><br>
       
-      <b>Menos de 10 reais por mês </b>para você finalmente conseguir vestir <b>as roupas que você usava com 20 anos e acabar de vez com a sensação de ansiedade e vergonha do seu próprio corpo...</b> Acabar de vez com a sensação de que as pessoas estão sempre olhando pra sua barriga quando você sai de casa.<br><br>
+      <b>Menos de 10 reais por mês </b>para você finalmente conseguir vestir <b>as roupas que você usava com 20 anos e acabar de vez com a sensação de ansiedade e vergonha do seu próprio corpo...</b> Acabar de vez com a sensação de que as pessoas estão sempre olhando pra sua barriga quando você sai de casa.<br>
 
 
       <br>
