--- a/cronograma21dias-obrigado1/index.html
+++ b/cronograma21dias-obrigado1/index.html
@@ -108,7 +108,7 @@
       <center><img height="250" src="cronograma.png"></center>
       <div style="text-align:center">
         
-              <p style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color:black; margin-left: 8%; margin-right: 8%; text-align: left;">É só tocar no botão para acessar o conteúdo AGORA!</p><br>
+              <p style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color:black; margin-left: 8%; margin-right: 8%; text-align: left;">É só tocar no botão abaixo para acessar o conteúdo AGORA!</p><br>
         <button id="kiwify-upsell-trigger-TQoGvUc" style="background-color:#F39C19;padding:12px 16px;cursor:pointer;color:#FFFFFF;font-weight:600;border-radius:4px;border:1px solid #F39C19;font-size:20px;">QUERO EMAGRECER AGORA!</button>
         <div id="kiwify-upsell-cancel-trigger" style="margin-top:1rem;cursor:pointer;font-size:16px;text-decoration:underline;font-family:sans-serif;">Não quero emagrecer</div>
       </div><script> 
